<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:src="@drawable/logo_polije"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:text="@string/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnToImplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immplicit"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/btnToExplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/oleh"
        android:textStyle="italic"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prodi"
        android:textColor="@color/black"/>

</LinearLayout>