<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentExplicit">

    <TextView
        android:id="@+id/textViewExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_are_you"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/textViewExp2"
        android:text="@string/i_am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textViewExp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"/>

    <EditText
        android:id="@+id/editNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBaseline="@+id/textViewExp2"
        android:layout_alignBottom="@+id/textViewExp2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewExp2" />

    <Button
        android:id="@+id/btnSend"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNama"
        android:layout_marginTop="26dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

</RelativeLayout>